# network_mon

./: .env  .env.example  .gitattributes  .gitignore  README.md  manage_db.py  pyproject.toml  requirements.txt  run.py
.cursor/rules/: my-custom-rules.mdc
.github/instructions/: python.instructions.md
app/: main.py
app/core/: config.py  dependencies.py  events.py  exceptions.py  middleware.py
app/db/: README.md  __init__.py  connection.py  router.py
app/models/: __init__.py  data_enum.py  data_models.py
app/network/: __init__.py  schemas.py
app/network/adapters/: __init__.py  base.py  cisco.py  h3c.py  huawei.py
app/network/cli/: __init__.py  cli_connection.py  cli_manager.py  cli_session.py  cli_startup.py
app/network/config/: __init__.py  config_manager.py  config_operations.py  config_tasks.py
app/network/core/: __init__.py  device_manager.py  inventory.py  runner.py
app/repositories/: README.md  __init__.py  base.py  config_dao.py  device_dao.py  log_dao.py  monitor_dao.py
app/schemas/: __init__.py  base.py  config.py  device.py  log.py  monitor.py  network.py
app/services/: README.md  __init__.py  base_service.py  config_service.py  device_service.py  log_service.py  monitor_service.py
app/utils/: __init__.py  log_decorators.py  logger.py
docs/: API_COMPLETION_SUMMARY.md  Auto_Network.md  auto_network-imp.md  development.md  fastapi-design-simple.md  fastapi-design.md  network-automation.md  phase3-completion-summary.md  service-layer-summary.md  websocket-cli-usage.md  websocket-design.md
migrations/models/: 0_20250617104154_init.py
(+23 files in other folders)
